Add shortcut to move container to next output

--- a/config
+++ b/config
@@ -67,6 +67,9 @@ bindsym $mod+v split v
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
+# move container to next output
+bindsym $mod+x move workspace to output right
+
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+t layout tabbed
