--- a/config
+++ b/config
@@ -130,6 +130,8 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+# lock the screen with i3lock
+bindsym $mod+Mod1+l exec "i3lock --image $HOME/Pictures/lock_image --tiling --ignore-empty-password --show-failed-attempts"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
