--- a/config
+++ b/config
@@ -142,20 +142,23 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# Use lemonbar with powerline instead of i3bar and i3status
+exec "python /home/kmoschcau/.pyenv/versions/3.6.5/lib/python3.6/site-packages/powerline/bindings/lemonbar/powerline-lemonbar.py --i3 --bar-command lemonbar -- -f '-windows-dinapowerline-medium-r-*-*-13-*-*-*-*-*-*-*'"
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-  status_command i3status
-  position top
-  colors {
-    background         #282828
-    statusline         #ebdbb2
-    focused_workspace  #83a598 #458588 #ebdbb2
-    inactive_workspace #7c6f64 #665c54 #bdae93
-    urgent_workspace   #fe8019 #d65d0e #ebdbb2
-    binding_mode       #8ec07c #689d6a #ebdbb2
-  }
-}
+# bar {
+#   status_command i3status
+#   position top
+#   colors {
+#     background         #282828
+#     statusline         #ebdbb2
+#     focused_workspace  #83a598 #458588 #ebdbb2
+#     inactive_workspace #7c6f64 #665c54 #bdae93
+#     urgent_workspace   #fe8019 #d65d0e #ebdbb2
+#     binding_mode       #8ec07c #689d6a #ebdbb2
+#   }
+# }
 
 # Colors:
 # client.<class> <border> <background> <text> <indicator> <child_border>
