--- a/config
+++ b/config
@@ -148,8 +148,6 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  status_command i3status
-  position top
   colors {
     background         #282828
     statusline         #ebdbb2
@@ -158,6 +156,9 @@ bar {
     urgent_workspace   #fe8019 #d65d0e #ebdbb2
     binding_mode       #8ec07c #689d6a #ebdbb2
   }
+  position top
+  status_command i3status
+  tray_output primary
 }
 
 # Colors:
