--- a/config
+++ b/config
@@ -139,11 +139,10 @@ mode "resize" {
   # back to normal: Enter or Escape or $mod+r
   bindsym Escape mode "default"
 }
-
 bindsym $mod+r mode "resize"
 
-# Use lemonbar with powerline instead of i3bar and i3status
-# exec "python /home/kmoschcau/.pyenv/versions/3.6.5/lib/python3.6/site-packages/powerline/bindings/lemonbar/powerline-lemonbar.py --i3 --bar-command lemonbar -- -f '-windows-dinapowerline-medium-r-*-*-13-*-*-*-*-*-*-*'"
+# hide the borders on workspaces with only one window
+hide_edge_borders smart
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
