--- a/config
+++ b/config
@@ -144,6 +144,9 @@ bindsym $mod+r mode "resize"
 # hide the borders on workspaces with only one window
 hide_edge_borders smart
 
+# disable mouse warping
+mouse_warping none
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
