--- a/config
+++ b/config
@@ -183,3 +183,7 @@ hide_edge_borders smart
 
 # disable mouse warping
 mouse_warping none
+
+# Startup applications {{{1
+exec --no-startup-id nm-applet
+exec --no-startup-id variety
