--- a/config
+++ b/config
@@ -185,5 +185,6 @@ hide_edge_borders smart
 mouse_warping none
 
 # Startup applications {{{1
+exec --no-startup-id compton
 exec --no-startup-id nm-applet
 exec --no-startup-id variety
