--- a/config
+++ b/config
@@ -155,21 +155,33 @@ mode --pango_markup $mode_system {
 # is used in the bar {} block below.
 font pango:Hack,FontAwesome 9
 
+# color definitions {{{2
+set $bright_neutral #eceff1
+set $medium_neutral #90a4ae
+set $dark_neutral #455a64
+set $pale_cyan #b2ebf2
+set $bright_cyan #00b8d4
+set $orange #ff9800
+set $purple #7b1fa2
+set $blue #1e88e5
+# }}}2
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
   colors {
     # colors for the i3bar components
-    # <colorclass> <border> <background> <text>
-    background         #666666
-    statusline         #fafafa
-    separator          #90a4ae
-    focused_background #666666
-    focused_workspace  #39adb5 #39adb5 #fafafa
-    active_workspace   #73b6b0 #73b6b0 #fafafa
-    inactive_workspace #90a4ae #90a4ae #fafafa
-    urgent_workspace   #ffad13 #ffad13 #fafafa
-    binding_mode       #82a550 #82a550 #fafafa
+    background         $dark_neutral
+    statusline         $bright_neutral
+    separator          $medium_neutral
+    focused_background $dark_neutral
+
+    # <colorclass>     <border> <background> <text>
+    focused_workspace  $bright_cyan    $bright_cyan    $bright_neutral
+    active_workspace   $medium_neutral $medium_neutral $bright_neutral
+    inactive_workspace $medium_neutral $dark_neutral   $bright_neutral
+    urgent_workspace   $orange         $orange         $bright_neutral
+    binding_mode       $blue           $blue           $bright_neutral
   }
   position top
   status_command i3blocks
@@ -177,13 +189,14 @@ bar {
 }
 
 # Colors:
-# client.<class> <border> <background> <text> <indicator> <child_border>
-client.focused          #666666 #39adb5 #fafafa #6182b8 #cceae7
-client.focused_inactive #666666 #73b6b0 #fafafa #8796b0 #eaeff0
-client.unfocused        #666666 #eaeff0 #666666 #8796b0 #eaeff0
-client.urgent           #666666 #ffad13 #fafafa #8796b0 #eaeff0
-client.placeholder      #666666 #cceae7 #666666 #8796b0 #eaeff0
-client.background       #fafafa
+# client.<class>        <border>        <background>    <text>          <indicator> <child_border>
+client.focused          $bright_cyan    $bright_cyan    $bright_neutral $pale_cyan  $dark_neutral
+client.focused_inactive $dark_neutral   $medium_neutral $bright_neutral $pale_cyan  $dark_neutral
+client.unfocused        $medium_neutral $dark_neutral   $bright_neutral $pale_cyan  $dark_neutral
+client.urgent           $orange         $orange         $bright_neutral $pale_cyan  $dark_neutral
+client.placeholder      $dark_neutral   $dark_neutral   $bright_neutral $pale_cyan  $dark_neutral
+
+client.background       $bright_neutral
 
 # Misc settings {{{1
 
