--- a/config
+++ b/config
@@ -158,7 +158,7 @@ mode --pango_markup $mode_system {
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Hack,FontAwesome 9
+font pango:Hack Nerd Font Mono Regular 9
 
 # color definitions {{{2
 set $bright_neutral #eceff1
