--- a/config
+++ b/config
@@ -156,9 +156,11 @@ mode --pango_markup $mode_system {
 
 # Styling settings {{{1
 
+set $font_name Arimo Nerd Font
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Hack Nerd Font Mono Regular 9
+font pango:$font_name 11
 
 # color definitions {{{2
 set $bright_neutral #eceff1
@@ -188,6 +190,7 @@ bar {
     urgent_workspace   $orange         $orange         $bright_neutral
     binding_mode       $blue           $blue           $bright_neutral
   }
+  font pango:$font_name 11
   position top
   status_command i3blocks
   tray_output primary
