--- a/config
+++ b/config
@@ -257,12 +257,14 @@ for_window [class="vlc"] title_format \
 
 # Floating rules {{{2
 
+for_window [title="Blender Preferences"] floating enable
+for_window [class="firefox" instance="Browser"] floating enable
+for_window [class="firefox" instance="Places"] floating enable
+for_window [title="Microsoft Teams Notification" window_type="notification"] \
+  floating enable
 for_window [class="Nm-connection-editor" instance="nm-connection-editor"] \
   floating enable
 for_window [class="Terminator" title="Terminator Preferences"] floating enable
-for_window [class="firefox" instance="Browser"] floating enable
-for_window [class="firefox" instance="Places"] floating enable
-for_window [title="Blender Preferences"] floating enable
 for_window [title="Variety Images"] floating enable
 
 # Workspace rules {{{2
