--- a/config
+++ b/config
@@ -260,6 +260,7 @@ for_window [class="libreoffice-impress"] title_format \
 for_window [class="Pcmanfm"] title_format "  %title"
 
 for_window [class="Terminator"] title_format "  %title"
+for_window [class="Alacritty"] title_format "  %title"
 
 for_window [class="vlc"] title_format \
   " <span foreground='#f48b00' background='$dark_neutral'>嗢</span> %title"
