--- a/config
+++ b/config
@@ -276,7 +276,9 @@ for_window [class="Nm-connection-editor" instance="nm-connection-editor"] \
   floating enable
 for_window [class="org-apache-jmeter-NewDriver"] floating enable
 for_window [class="Terminator" title="Terminator Preferences"] floating enable
+for_window [title="Variety History"] floating enable
 for_window [title="Variety Images"] floating enable
+for_window [title="Variety Recent Downloads"] floating enable
 
 # Workspace rules {{{2
 
